--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "mongoose": "^6.5.4",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.19",
+    "path": "^0.12.7",
     "serve-index": "^1.9.1",
     "winston": "^3.8.2",
     "winston-daily-rotate-file": "^4.7.1"
