--- a/vercel.json
+++ b/vercel.json
@@ -1,16 +1,26 @@
 {
     "version": 2,
     "builds": [
-     {
-      "src": "server.js",
-      "use": "@vercel/node",
-      "config": { "includeFiles": ["dist/**"] }
-     }
+        {
+            "src": "server.js",
+            "use": "@vercel/node",
+            "config": {
+                "includeFiles": [
+                    "dist/**"
+                ]
+            }
+        }
     ],
     "routes": [
-     {
-      "src": "/(.*)",
-      "dest": "server.js"
-     }
+        {
+            "src": "/(.*)",
+            "dest": "server.js"
+        }
+    ],
+    "rewrites": [
+        {
+            "source": "/.well-known/(.*)",
+            "destination": "/.well-known/$1"
+        }
     ]
-   }
+}
