--- a/vercel.json
+++ b/vercel.json
@@ -20,8 +20,12 @@
             "handle": "filesystem"
         },
         {
-            "src": "/\\.well-known/(.*)",
-            "dest": "/.well-known/$1"
+            "src": "/\\.well-known/assetlink.json",
+            "dest": "/.well-known/assetlink.json"
+        },
+        {
+            "src": "/\\.well-known/assetlink.json",
+            "dest": "/\\.well-known/assetlink.json"
         }
     ],
     "rewrites": [
