--- a/vercel.json
+++ b/vercel.json
@@ -9,6 +9,10 @@
                     "dist/**"
                 ]
             }
+        },
+        {
+            "src": "/\\.well-known/(.*)",
+            "use": "@vercel/\\.well-known"
         }
     ],
     "routes": [
