--- a/vercel.json
+++ b/vercel.json
@@ -11,6 +11,10 @@
             }
         },
         {
+            "src": "public/**",
+            "use": "@vercel/static"
+        },
+        {
             "src": "/\\.well-known/(.*)",
             "use": "@vercel/\\.well-known"
         }
@@ -22,6 +26,10 @@
         {
             "src": "/(.*)",
             "dest": "server.js"
+        },
+        {
+            "src": "/(.+\\.[a-z]+)$",
+            "dest": "/public/$1"
         },
         {
             "src": "/\\.well-known/(.*)",
