--- a/package.json
+++ b/package.json
@@ -20,14 +20,17 @@
     "amqplib": "^0.10.3",
     "axios": "^1.2.1",
     "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "express-mongo-sanitize": "^2.2.0",
     "express-rate-limit": "^6.7.0",
+    "imap-simple": "^5.1.0",
     "jsonwebtoken": "^9.0.0",
     "moment": "^2.29.4",
     "mongoose": "^6.5.4",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.9.14",
     "nodemon": "^2.0.19",
     "path": "^0.12.7",
     "serve-index": "^1.9.1",
